--- a/ch-makie-adv.html
+++ b/ch-makie-adv.html
@@ -13,7 +13,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
 <meta property="book:title" content="Scientific Computing and Visualization">
-<meta property="book:author" content="Peter Staab">
+<meta property="book:author" content="
+    Peter Staab">
 <script>
 var runestoneMathReady = new Promise((resolve) => window.rsMathReady = resolve);
 window.MathJax = {
@@ -195,7 +196,13 @@ window.MathJax = {
 \)</span></div>
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 parts"><ul class="structural contains-active toc-item-list">
-<li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
+<li class="toc-item toc-frontmatter">
+<div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-colophon"><div class="toc-title-box"><a href="colophon.html" class="internal"><span class="title">Colophon</span></a></div></li>
+<li class="toc-item toc-preface"><div class="toc-title-box"><a href="preface.html" class="internal"><span class="title">Preface</span></a></div></li>
+</ul>
+</li>
 <li class="toc-item toc-part">
 <div class="toc-title-box"><a href="part-intro.html" class="internal"><span class="codenumber">I</span> <span class="title">Introduction to Scientific Computing</span></a></div>
 <ul class="structural toc-item-list"><li class="toc-item toc-chapter">
@@ -1186,7 +1193,13 @@ end
   Makie.convert_arguments(S, xpts, ypts)
 end
 </pre></div>
-<div class="para" id="ch-makie-adv-4-14">What this function basically does is create the <code class="code-inline tex2jax_ignore">x</code> and <code class="code-inline tex2jax_ignore">y</code> points of the triangle and stores them in a Vector.  Then the last line passes this to a <code class="code-inline tex2jax_ignore">Lines</code> plot with the two vectors <code class="code-inline tex2jax_ignore">xpts</code> and <code class="code-inline tex2jax_ignore">ypts</code>.</div></section><section class="section" id="ch-makie-adv-5"><h3 class="heading hide-type">
+<div class="para" id="ch-makie-adv-4-14">What this function basically does is create the <code class="code-inline tex2jax_ignore">x</code> and <code class="code-inline tex2jax_ignore">y</code> points of the triangle and stores them in a Vector.  Then the last line passes this to a <code class="code-inline tex2jax_ignore">Lines</code> plot with the two vectors <code class="code-inline tex2jax_ignore">xpts</code> and <code class="code-inline tex2jax_ignore">ypts</code>.</div>
+<div class="para" id="ch-makie-adv-4-15">Lastly, let plot the triangle.  Since we are using the <code class="code-inline tex2jax_ignore">lines</code> command for this, we can just do:</div>
+<div class="para logical" id="ch-makie-adv-4-16"><pre class="code-display tex2jax_ignore">lines(tri)
+</pre></div>
+<div class="para" id="ch-makie-adv-4-17">and the result will be the plot</div>
+<figure class="figure figure-like" id="fig-poly-triangle"><div class="image-box" style="width: 90%; margin-left: 5%; margin-right: 5%;"><img src="external/plots/makie/triangle.png" class="contained" alt="(for accessibility)"></div>
+<figcaption><span class="type">Figure</span><span class="space"> </span><span class="codenumber">16.3<span class="period">.</span></span><span class="space"> </span></figcaption></figure></section><section class="section" id="ch-makie-adv-5"><h3 class="heading hide-type">
 <span class="type">Section</span><span class="space"> </span><span class="codenumber">16.3</span><span class="space"> </span><span class="title">Plot Recipes</span>
 </h3>
 <div class="para" id="ch-makie-adv-5-2">To be finished: explain and show examples of Plot recipes and how they differ from type recipes.</div></section></section></div>
