--- a/knowl/xref/eq-8bit.html
+++ b/knowl/xref/eq-8bit.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{equation}
 x = -s \cdot 2^7 + a_6 2^6 + a_5 2^5 + a_4 2^4 + a_32^3 + a_2 2^2 + a_1 2^1 + a_0 2^0\tag{C.1}
 \end{equation}
