--- a/knowl/xref/eq-chud-pi.html
+++ b/knowl/xref/eq-chud-pi.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{equation}
 \pi = \frac{\sqrt{640320^3}}{12S}\tag{39.10}
 \end{equation}
