--- a/knowl/xref/eq-chud2.html
+++ b/knowl/xref/eq-chud2.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{align}
 \frac{1}{\pi} \amp = \frac{12}{\sqrt{640320^3}} \sum_{k=0}^{\infty} a_k (545140134 k + 13591409)\tag{39.8}\\
 \amp = \frac{12}{\sqrt{640320^3}} \biggl( 545140134 \sum_{k=0}^{\infty} k a_k + 13591409 \sum_{k=0}^{\infty} a_k \biggr) \tag{39.9}\\
