--- a/knowl/xref/eq-diff-eqn-simple.html
+++ b/knowl/xref/eq-diff-eqn-simple.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{equation}
 y' = f(y,t), \qquad y(0) = y_0 \tag{35.1}
 \end{equation}
