--- a/knowl/xref/eq-quad.html
+++ b/knowl/xref/eq-quad.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{equation}
 12.242{x}^{2}+42.382x+0.0012=0.\tag{11.1}
 \end{equation}
