--- a/knowl/xref/eq-trap-rule-1.html
+++ b/knowl/xref/eq-trap-rule-1.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{align}
 A\amp ={\sum_{i=1}^{n-1}} \frac{h}{2}(f(x_i)+f(x_{i+1})) \notag \notag\\
 \amp =\frac{h}{2}\left(f(x_0)+f(x_1)+f(x_1)+f(x_2)+ \cdots + f(x_{n-1})+f(x_n)\right)\tag{34.1}\\
