--- a/knowl/xref/eq-arctan-ps.html
+++ b/knowl/xref/eq-arctan-ps.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{align}
 \int \frac{1}{1+x^2}\, dx \amp = \int (1-x^2+x^4-x^6 + \cdots ) \, dx \notag\\
 \tan^{-1} x  \amp = x -\frac{x^3}{3} + \frac{x^5}{5} - \frac{x^7}{7} + \cdots \tag{39.2}
