--- a/knowl/xref/eq-dft.html
+++ b/knowl/xref/eq-dft.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{equation}
 \hat{x}_k = \sum_{j=1}^N x_j e^{(-2\pi i kj)/N}\tag{37.1}
 \end{equation}
