--- a/knowl/xref/eq-euler-pi.html
+++ b/knowl/xref/eq-euler-pi.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{align}
 a+b \amp  = \tan^{-1} 1 = \frac{\pi}{4} \qquad \text{or} \notag\\
 \pi \amp = 4(a+b) = 4 \bigl( \tan^{-1} \frac{1}{2} + \tan^{-1} \frac{1}{3} \bigr) \tag{39.3}
