--- a/knowl/xref/eq-f.html
+++ b/knowl/xref/eq-f.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{equation}
 f(x,y) = \sin\biggl(\frac{1}{2}x^2-\frac{1}{4}y^2+2\biggr)\cos(x+y)\tag{36.1}
 \end{equation}
