--- a/knowl/xref/eq-geom-series.html
+++ b/knowl/xref/eq-geom-series.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{equation}
 \frac{1}{1-x} = 1+x+x^2+x^3 + \cdots\tag{39.1}
 \end{equation}
