--- a/knowl/xref/eq-parker.html
+++ b/knowl/xref/eq-parker.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{align}
 \frac{\pi}{4} = \amp 83 \tan^{-1} \frac{1}{107}+ 17 \tan^{-1} \frac{1}{1710} -22 \tan^{-1} \frac{1}{103697}  \notag\\
 \amp \qquad -24 \tan^{-1} \frac{1}{2513489} -44 \tan^{-1} \frac{1}{18280007883} \notag\\
