--- a/knowl/xref/eq-poly.html
+++ b/knowl/xref/eq-poly.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{equation}
 p(x) = a_0 + a_1 x + a_2 x^2 + \cdots + a_n x^n\tag{10.1}
 \end{equation}
