--- a/knowl/xref/eq-takano.html
+++ b/knowl/xref/eq-takano.html
@@ -11,7 +11,7 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<div class="displaymath process-math">
+<div xmlns:pf="https://prefigure.org" class="displaymath process-math">
 \begin{align}
 \frac {\pi }{4} = \amp 12\arctan\biggl(\frac {1}{49}\biggr)+32\arctan\biggl(\frac {1}{57}\biggr)\notag\\
 \amp \qquad -5\arctan\biggl(\frac {1}{239}\biggr)+12\arctan\biggl(\frac {1}{110443}\biggr). \tag{39.5}
