--- a/knowl/xref/exer-four-letter.html
+++ b/knowl/xref/exer-four-letter.html
@@ -12,8 +12,8 @@
 </head>
 <body class="ignore-math">
 <article class="exercise exercise-like"><h5 class="heading">
-<span class="type">Check Your Understanding</span><span class="space"> </span><span class="codenumber">25.2</span><span class="period">.</span>
+<span class="type">Check Your Understanding</span><span xmlns:pf="https://prefigure.org" class="space"> </span><span class="codenumber">25.2</span><span xmlns:pf="https://prefigure.org" class="period">.</span>
 </h5>
-<div class="para">Write a regular expression to match five-letter words (which may be useful for solving Wordle). Start first with the lower-case latin characters and then allow other characters like the greek letters.  Test against 4, 5 and 6 letter words that should and should not match.</div></article><span class="incontext"><a class="internal" href="ch-regexp.html#exer-four-letter">in-context</a></span>
+<div xmlns:pf="https://prefigure.org" class="para">Write a regular expression to match five-letter words (which may be useful for solving Wordle). Start first with the lower-case latin characters and then allow other characters like the greek letters.  Test against 4, 5 and 6 letter words that should and should not match.</div></article><span class="incontext"><a class="internal" href="ch-regexp.html#exer-four-letter">in-context</a></span>
 </body>
 </html>
